--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/image/logo 150x150.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="asset/image/logo 150x150.png" rel="icon">
+  <link href="asset/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="asset/vendor/aos/aos.css" rel="stylesheet">
+  <link href="asset/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="asset/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="asset/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="asset/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="asset/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="asset/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: FlexStart - v1.9.0
@@ -117,7 +117,7 @@
     <div class="row">
       <div class="col-lg-6  " id="padd_50" >
         <center>
-        <img src="assets/image/300x400 Image.png" id="dish_img" alt="" style="border-radius: 15px;">
+        <img src="asset/image/300x400 Image.png" id="dish_img" alt="" style="border-radius: 15px;">
         <h3 id="padd_30" style="color: #000; font-family:;"><b>Adding Warmth <br>& taste to</b></h3>
         <div id="dek_padd" >
         <h2 id="color_orange" ><b>PAN ASIAN CRAVINGS</b></h2>
@@ -128,7 +128,7 @@
 
       <div class="col-lg-6  " id="padd_50" >
         <center>
-        <img src="assets/image/300x400 Image_2.png" id="dish_img" alt="" style="border-radius: 15px;">
+        <img src="asset/image/300x400 Image_2.png" id="dish_img" alt="" style="border-radius: 15px;">
         <h3 id="padd_30" style="color: #000;"><b>Let Your taste <br> buds go</b></h3>
         <h2 id="color_orange"><b>MAMMA MIA</b></h2>
       
@@ -150,7 +150,7 @@
     </div>
     <div class="container" data-aos="fade-up">
       <div class="row">
-<img src="assets/image/Menu 800x800.png" id="menu_image" alt="">
+<img src="asset/image/Menu 800x800.png" id="menu_image" alt="">
       </div>
      
     </div>
@@ -170,7 +170,7 @@
           </div>
           <div class="col-lg-6 ">
             <center>
-            <img src="assets/image/400x400 Image.png" id="person_img" alt="">
+            <img src="asset/image/400x400 Image.png" id="person_img" alt="">
           </center> 
           </div>
 
@@ -337,16 +337,16 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="asset/vendor/purecounter/purecounter.js"></script>
+  <script src="asset/vendor/aos/aos.js"></script>
+  <script src="asset/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="asset/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="asset/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="asset/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="asset/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="asset/js/main.js"></script>
 
 </body>
 
